Added Goals and Time Logs collection CRUD operations.
