# routes/index.js
@@ -4,6 +4,8 @@ const passport=require('passport');
 routes.use('/', require('./swagger'));
 routes.use('/users' , require('./users'));
 routes.use('/tasks' , require('./tasks'));
+routes.use('/goals' , require('./goals'));
+routes.use('/timeLogs' , require('./timeLogs'));
 
 routes.get('/login', passport.authenticate('github'), (req, res)=>{});
 routes.get('/logout', function(req, res, next){
